# PhotonMapping

./: README.txt  SmallPM.sln  SmallPM_vs2010.sln  SmallPM_vs2013.sln
SmallPM/: D+I_Reflejos.hdr  Entregable.hdr  I_Muchos_.hdr  I_Reflejos.hdr  Prueba_sombras.hdr  SOMBRAS_DOS_LUCES_I+D.hdr  SOmbras_I+D_SOLO_NEGROS.hdr  SmallPM_vs2010.vcproj  SmallPM_vs2010.vcxproj  SombrasCompletasSinPuntos.hdr  Sombras_I+D.hdr  bandazi_5_calidad.hdr  bandazo.hdr  bandazo2_que_va_a_menos.hdr  bandazo_3.hdr  bandazo_4.hdr  bandazo_6.hdr  bandazo_7.hdr  prueba_X.hdr
SmallPM/Debug/: vc120-Jorge.idb  vc120.idb
SmallPM/Debug/SmallPM.tlog/: CL.read.1-Jorge.tlog  CL.read.1.tlog  CL.write.1-Jorge.tlog  CL.write.1.tlog  SmallPM.lastbuildstate  cl.command.1.tlog  link.command.1-Jorge.tlog  link.command.1.tlog  link.read.1-Jorge.tlog  link.write.1-Jorge.tlog
SmallPM/Release/SmallPM.tlog/: CL.read.1.tlog  CL.write.1.tlog  SmallPM.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SmallPM/SmallRT/include/: AABB.h  BSDF.h  BVH.h  Camera.h  Film.h  Intersection.h  Lambertian.h  LightSource.h  Matrix4x4.h  Mesh.h  Object3D.h  Plane.h  Ray.h  Specular.h  Sphere.h  Timer.h  (+7 more)
SmallPM/SmallRT/include/image/: CMakeLists.txt  cimg-additions.h  image-function.h  image-manager.h  image-sampler-iterative.h  image-sampler-threads.h  image-sampler.h  image.h  mlaa-wrapper.h  mlaa.hxx  rgbcolor.h  spectrum2rgb.h  spectrum2rgb.old.h  tone-mapper.h
SmallPM/include/: KDTree.h  PhotonMapping.h  RenderEngine.h
SmallPM/src/: PhotonMapping.cpp  RenderEngine.cpp  main.cpp
(+5 files in other folders)
